# tinyland-a11y-engine

./: .bazelrc  .npmrc  BUILD.bazel  LICENSE  MODULE.bazel  README.md  flake.nix  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  publish.yml
src/: AccessibilityOrchestrator.ts  actions.ts  browser.ts  browserRuntime.ts  contrast.ts  example-integration.ts  index.ts  preprocessor.ts  types.ts  validators.ts
src/core/: EvaluationEngine.ts  QueueManager.ts
src/engine/: ContrastAnalyzer.ts  context.ts  events.ts  index.ts  performance.ts  workers.ts
src/engine/rules/: registry.ts
src/plugins/: aria-validator.ts  color-contrast.ts  index.ts  keyboard-navigation.ts  wcag-aa.ts
src/reporting/: HtmlReportGenerator.ts  JsonReportGenerator.ts  MarkdownReportGenerator.ts  ReportOrchestrator.ts  index.ts  types.ts
src/sampler/: DOMSampler.ts  index.ts
src/streaming/: StreamingClient.ts  StreamingProtocol.ts  compression.ts  index.ts  queue.ts  reconnect.ts
src/utils/: timing.ts
src/utils/color/: index.ts
src/validators/: AriaValidator.ts  ContrastTestRunner.ts  ContrastValidator.ts  KeyboardNavigationValidator.ts  RuntimeContrastMonitor.ts  ThemeContrastValidator.ts  index.ts
tests/: AccessibilityOrchestrator.test.ts  contrast.test.ts
tests/engine/: ContrastAnalyzer.test.ts
tests/helpers/: contrast.ts  validators.ts
tests/validators/: AriaValidator.test.ts  KeyboardNavigationValidator.test.ts
